# memmd-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.ko.md
src/memmd_mcp/: __init__.py  logic.py  models.py  server.py  storage.py
tests/: test_manager.py
